# goit-pythonweb-hw-10

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 858f43b97269_add_refresh_token.py  b32566a2be41_add_refresh_token.py  c47b5018078f_init_users.py  dafe58c6205b_contact_email_unique_per_user.py  ebc97b1effa1_init_migrations.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_avatar.py  users.py
src/services/templates/: email_template.html
